src/styles/scss/_shared.scss
@import url('https://fonts.googleapis.com/css?family=Abel');
@import url('https://fonts.googleapis.com/css?family=Inconsolata');

html { 
	min-height: 100%;
}

body {
	color: var(--textColor);
	background: var(--dark-background);
	font-family: 'Abel', sans-serif;
	font-size: 18px;
	min-height: 100vh;
	margin: 0;

	a {
		color: inherit;
	
		&:hover {
			text-decoration-style: double; 
		}
	}

	code {
		background-color: var(--color);
		font-family: 'Inconsolata', monospace;
		font-size: 16px;
		padding: 2px 4px;
	}

	pre {
		background-color: var(--color);
		padding: 10px;

		code {
			padding: 0;
		}
	}

	blockquote {
		margin: 0;
		padding-left: 10px;
		border-left: var(--border);
	}
}

@mixin mainColumn () {
	align-self: flex-start;
	justify-self: flex-start;
	grid-area: 4 / 2 / auto / 4;
	max-width: 650px;

	@include layoutS {
		grid-area: 4 / 3;
	}
}

@mixin shadow($spacing: 8px) {
	background-color: white;
	border: var(--border);
	position: relative;

	&::after {
		content: '';
		position: absolute;
		background-color: var(--outlineColor);
		top: $spacing;
		left: $spacing;
		right: -#{$spacing};
		bottom: -#{$spacing};
		z-index: -1;
	}
}

@mixin animatedLink($direction) {
	text-decoration: none;

	&:before {
		content: '';
		position: absolute;
		top: set($direction, top);
		right: set($direction, right);
		bottom: set($direction, bottom);
		left: set($direction, left);
		transition: #{$direction} 0.3s ease-in-out;
		background-color: var(--color);
	}

	&:hover:before {
		content: attr(data-text);
		padding: 10px;
		#{$direction}: 0;
	}
}

@function set($direction, $property) {
	@return if($property == $direction, 100%, 0);
}

